# stock-decision-assistant-ml

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml
config/: thresholds.example.yaml  watchlist.example.yaml
docs/issues/: 07-silent-fuse-alert-failure.md  09-sentiment-confidence-stuck-0.45.md
docs/plans/: ml-data-requirements.md  ml-feature-engineering.md  ml-training-robustness.md
scripts/: schwab_login.py
src/: __init__.py  config_loader.py  logging_config.py  main.py  sda_types.py  settings.py
src/data/: ingest.py  news_alphavantage.py  news_anthropic_web.py  news_newsapi.py  news_utils.py  news_yfinance.py  store.py
src/ml/: debug_plots.py  evaluate.py  features.py  labels.py  predict.py  registry.py  splits.py  train.py
src/notify/: base.py  email.py  push.py  sms.py
src/schwab_client/: __init__.py  accounts.py  auth.py  market_data.py
src/sentiment/: __init__.py  aggregate.py  analyze.py  llm_provider.py
src/signals/: __init__.py  fuse.py  (+1 more)
tests/: test_artifact_pruning.py  test_config_loader.py  test_evaluate.py  test_feature_staleness.py  test_features.py  test_features_clipping.py  test_labels.py  test_labels_features.py  test_llm_provider.py  test_logging_config.py  test_news_anthropic_web.py  test_news_ingest.py  test_notify.py  test_predict_best_horizon.py  test_predict_threshold.py  test_run_cycle_logging.py  test_sell_guidance.py  test_signal_fusion.py  test_splits.py  test_train.py  test_train_class_imbalance.py  test_train_promotion.py  test_train_purgedcv_leakage.py
