[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-decision-assistant"
version = "0.1.0"
description = "Local stock decision assistant using Schwab market data, ML, and news sentiment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "openai>=1.30.0",
  "anthropic>=0.30.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "scikit-learn>=1.4.2",
  "schwab-py>=1.5.0",
  "ta>=0.11.0",
  "twilio>=9.1.0",
  "xgboost>=2.0.3",
  "yfinance>=0.2.40",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
